# IntelliBatch

./: .gitignore  CMakeLists.txt  README.md  build.bat  temp.txt
docs/: README.md
include/: app.h  mainframe.h
include/config/: configmanager.h
include/explorer/: yaziexplorer.h
include/lua/: luascript.h
include/search/: indexer.h  searchbar.h
include/terminal/: terminalwx.h
include/ui/: taskbar.h  tilingmanager.h
include/widgets/: widgetmanager.h
res/icons/: README.txt
res/themes/: default.json
src/: CMakeLists.txt  app.cpp  main.cpp  mainframe.cpp
src/terminal/: terminalwx.cpp
src/ui/: tilingmanager.cpp
tests/: CMakeLists.txt  README.md
tests/unit/: config_test.cpp
